# DECASE

./: .gitignore  Dockerfile  README.md  additional_input.ipynb  as_is_module.ipynb  classification_agent.ipynb  description_agent.ipynb  difficulty_agent.ipynb  docker-build.sh  docker-push.sh  env.properties  extracted_audio_requirements_final.json  extracted_audio_requirements_final_v3.json  extracted_audio_requirements_final_v4.json  extracted_audio_requirements_final_v6.json  extracted_requirements_final.json  fastserver.py  generate_srs_module.ipynb  importance_agent.ipynb  ingress.yaml  main.py  mockup.ipynb  pyproject.toml  requirements.txt  rfp_agent.ipynb  rfp_flow.ipynb  test.ipynb  transcription.ipynb  update_requirements.ipynb
app/: database.py  init_db.py
app/agents/: asis_analysis_agent.py  asis_extraction_agent.py  classification_agent.py  description_agent.py  difficulty_agent.py  importance_agent.py  mockup_agent.py  mockup_analyzer_agent.py  mockup_generator_agent.py  mockup_planner_agent.py  report_generation_agent.py  requirements_extract_agent.py  requirements_refine_agent.py
app/agents/asis/: report_generation_agent.py
app/agents/mockup/: mockup_agent.py
app/agents/srs/: classification_agent.py  description_agent.py  requirements_refine_agent.py
app/agents/update/: meeting_analyzer_agent.py
app/api/v1/: asis copy.py  asis.py  description.py  faiss.py  jobs.py  mockup.py  process copy.py  process.py  refine.py  request.py
app/api/v2/: asis.py  process.py
app/api/v3/: asis_db.py  asis_job.py  srs_db.py  srs_job.py
app/core/: base.py  config.py  mysql_config.py  test_mysql_connection.py
app/graph/: rfp_graph.py
app/models/: __init__.py  company.py  department.py  document.py  member.py  project.py  requirement.py  source.py
app/repositories/: document_repository.py
app/routers/: asis.py  description.py  process.py
app/schemas/: asis.py  description.py  faiss.py  mockup.py  request.py  requirement.py
app/services/: background_asis_services.py  background_faiss_service.py  background_processing_service.py  change_request_service.py  embedding_service.py  faiss_search_service.py  faiss_service.py  file_processing_service.py  id_management_service.py  llm_call_service.py  mockup_service.py  requirement_service.py
k8s/: application.yaml  deploy.yaml  ingress.yaml  service.yaml
