[tool.poetry]
name = "langchain-kr"
version = "0.1.1"
description = "Ultimate LangChain Tutorial written in Korean by TeddyNote."
authors = ["teddy <teddylee777@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
google-generativeai = "*"

# 필수 LangChain 및 LLM 관련
langchain = "0.*"
langchain-core = "0.*"
langchain-community = "0.*"
langchainhub = "0.*"
openai = "1.*"
langchain-experimental = "^0.3.4"
langchain-openai = "^0.3.18"

# 데이터 분석 및 벡터 검색
pandas = "2.*"
faiss-cpu = "1.*"
scikit-learn = "1.*"

# 파일 및 문서 처리
pymupdf = "1.*"
pypdf = "4.*"
pdfplumber = "0.*"
docx2txt = "0.*"
unstructured = {version = "0.*", extras = ["all-docs"]}

# 시각화 및 인터페이스
matplotlib = "3.*"
seaborn = "0.*"
streamlit = "1.*"

# 기타 유틸리티
python-dotenv = "1.*"
pydantic = "2.*"
lxml = "5.*"
pillow = "10.*"
tiktoken = "0.*"
tenacity = "8.*"
nest-asyncio = "1.*"
openai-whisper = "^20240930"
numpy = "<2.0"
langgraph = "^0.4.7"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
anthropic = "^0.52.2"
sentence-transformers = "^4.1.0"
reportlab = "^4.4.1"
markdown-pdf = "^1.7"
aiomysql = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


